--- a/personalWorkTime/personalWorkTime.phtml
+++ b/personalWorkTime/personalWorkTime.phtml
@@ -101,7 +101,7 @@ $sum = $model->getSum();
 						<table>
 							<tr>
 
-								<!--表示非表示の切り替え　年次-->
+								<!--検索フォームの切り替え　年次-->
 								<?php $yearList = createYearSet();?>
 								<td id="formYear">
 									<select name="year">
@@ -112,12 +112,12 @@ $sum = $model->getSum();
 									</select> 年
 								</td>
 
-								<!--表示非表示の切り替え　月次-->
+								<!--検索フォームの切り替え　月次-->
 						       	<td id="formMonth">
 									<input type="month" name="month" placeholder="例)2014-01" value="<?=$model->getMonth();?>">
 								</td>
 
-								<!--表示非表示の切り替え　期間-->
+								<!--検索フォームの切り替え　期間-->
 								<td id="formPeriod">
 									 開始期間
 									<input type="month" name="startDay" placeholder="例)2014-06"
@@ -174,6 +174,7 @@ $sum = $model->getSum();
 									<td class="<?= $class;?>"><?=$workdata[$v][$i][0]?></td>
 									<td class="<?= $class;?>"><?=$week[$w]?></td>
 
+									<!-- ステータスIDが３のとき、開始時間と終了時間の列に空のセルを生成 -->
 									<?php if($workdata[$v][$i][5] == 3){?>
 
 										<td></td><td></td>
@@ -204,6 +205,7 @@ $sum = $model->getSum();
 											}
 									?>
 
+										<!-- 実働時間の算出｛（出勤から退勤までの時間-休憩時間）/3600(1時間)｝ -->
 										<td><?=round(($workdata[$v][$i][3]-$restdata[$j]['resttime'])/3600,2)?></td>
 									<?php }?>
 
@@ -212,6 +214,7 @@ $sum = $model->getSum();
 											<?php for($y=0; $y<count($statusinfo); $y++){?>
 												<option value="<?=$statusinfo[$y][0]?>"
 													<?php
+
 													if($workdata[$v][$i][0] == $workstatus[$s][0]){
 														if($workstatus[$s][1] == $statusinfo[$y][0]){echo ' selected';}
 													}else{
@@ -239,6 +242,7 @@ $sum = $model->getSum();
 						</table>
 
 						<table class="sum">
+
 							<tr class="record">
 								<th>勤務日数</th>
 								<th><?=$sum[$v]['sumDay']?>
@@ -247,6 +251,7 @@ $sum = $model->getSum();
 								<th>合計勤務時間</th>
 								<th><?=round($sum[$v]['sumWorkTime'],2)?></th>
 							</tr>
+
 						</table>
 					<?php }?>
 
